--- a/apps/wishlist/templates/wishlist/index.html
+++ b/apps/wishlist/templates/wishlist/index.html
@@ -23,7 +23,7 @@
             <p><label>Username<input type="text" name="username"></label></p>
             <p><label>Password:<input type="text" name="password"></label></p>
             <p><label>Confirm PW:<input type="text" name="confirm_pw"></label></p>
-            <p><label>Date Hired:<input type="date" name="date_hired"></label></p>
+            <!--<p><label>Date Hired:<input type="date" name="date_hired"></label></p>-->
             <input type="submit" value="Register">
         </form>
         <h3>Login</h3>
